@@ -7,6 +7,7 @@
 *** Deprecated
 *** Removed
 *** Fixed
++ *tetragono*: Fix the missing conjugate for the energy during calculation of natural gradient.
 
 ** [[https://github.com/USTC-TNS/TNSP/compare/v0.3.12...v0.3.15][v0.3.15]] - 2024-02-28
 
